--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 <body>
     <header>
-        <nav>
-            <div class="companyname">
+        <div class="companyname">
 <!-- company name -->
-                <h1>Sweet Eats Bakery</h1>
-            </div>
+            <h1>Sweet Eats Bakery</h1>
+        </div>
 <!-- Navigation -->
+        <nav>
             <div class="links">
                 <a href="#about">About</a>
                 <a href="#cookies">Cookies</a>
@@ -24,40 +24,53 @@
                 <a href="#contact">Contact</a>
             </div>
         </nav>
+        <div class="headerimg">
+            <img src="https://tk-assets.lambdaschool.com/bcf76f62-2431-4c22-b466-2e711f3da2b9_ui-i-bakery-main-header.png">
+        </div>
     </header>
-    
-<!-- Image https://tk-assets.lambdaschool.com/bcf76f62-2431-4c22-b466-2e711f3da2b9_ui-i-bakery-main-header.png -->
-
 <!-- Marketing header -->
-    <h2>About Sweet Eats Bakery</h2>
+    <section id="about">
+        <h2>About Sweet Eats Bakery</h2>
 
-    <p>Marzipan jelly-o macaroon I love macaroon jujubes. Candy candy canes jujubes I love ice cream croissant. Lollipop donut icing I love liquorice gummi bears marzipan. Dragée jelly beans apple pie cotton candy lemon drops pastry candy powder.</p>
-
+        <p>Marzipan jelly-o macaroon I love macaroon jujubes. Candy candy canes jujubes I love ice cream croissant. Lollipop donut icing I love liquorice gummi bears marzipan. Dragée jelly beans apple pie cotton candy lemon drops pastry candy powder.</p>
+    </section>
 <!-- content -->
 
 <!-- Image https://tk-assets.lambdaschool.com/7393a8fd-c8e5-4003-921f-79e0d546d02c_ui-i-bakery-cookies.png -->
-    <h2>Cookies</h2>
+    <section id="cookies">
+        <img src="https://tk-assets.lambdaschool.com/7393a8fd-c8e5-4003-921f-79e0d546d02c_ui-i-bakery-cookies.png">
 
-    <p>Cookie soufflé dessert carrot cake fruitcake halvah pudding cake. Marzipan topping bear claw soufflé gingerbread biscuit. Tiramisu gummi bears chocolate bar sugar plum icing muffin cake jelly-o icing.</p>
-    
+        <h2>Cookies</h2>
+
+        <p>Cookie soufflé dessert carrot cake fruitcake halvah pudding cake. Marzipan topping bear claw soufflé gingerbread biscuit. Tiramisu gummi bears chocolate bar sugar plum icing muffin cake jelly-o icing.</p>
+    </section>
 <!-- Image https://tk-assets.lambdaschool.com/297378d6-9c89-430f-9d2e-46ae3d5edce8_ui-i-bakery-cupcake-i.png -->
-    <h2>Celebrations</h2>
+    <section id="celebrations">
+        <img src="https://tk-assets.lambdaschool.com/297378d6-9c89-430f-9d2e-46ae3d5edce8_ui-i-bakery-cupcake-i.png">
 
-    <p>Candy apple pie lemon drops sweet roll danish. Tiramisu candy canes jelly-o jelly beans cotton candy pastry pudding tootsie roll carrot cake. Dessert sesame snaps brownie lemon drops cookie donut dragée. Toffee pie fruitcake powder gingerbread pudding.</p>
+        <h2>Celebrations</h2>
 
+        <p>Candy apple pie lemon drops sweet roll danish. Tiramisu candy canes jelly-o jelly beans cotton candy pastry pudding tootsie roll carrot cake. Dessert sesame snaps brownie lemon drops cookie donut dragée. Toffee pie fruitcake powder gingerbread pudding.</p>
+    </section>
 <!-- Image https://tk-assets.lambdaschool.com/ab0cb095-5900-476c-b042-aea065d3dbbf_ui-i-bakery-celebrate.png -->
-    <h2>Catering</h2>
+    <section id="catering">
+        <img src="https://tk-assets.lambdaschool.com/ab0cb095-5900-476c-b042-aea065d3dbbf_ui-i-bakery-celebrate.png">
 
-    <p>Sweet jelly-o apple pie powder jelly beans. Pastry sweet roll cake jujubes halvah soufflé brownie. Toffee cookie lemondrops jelly beans chocolate bar. Wafer muffin jujubes danish tart danish chocolate wafer.</p>
+        <h2>Catering</h2>
 
-    <h2>Contact Us</h2>
+        <p>Sweet jelly-o apple pie powder jelly beans. Pastry sweet roll cake jujubes halvah soufflé brownie. Toffee cookie lemondrops jelly beans chocolate bar. Wafer muffin jujubes danish tart danish chocolate wafer.</p>
+    </section>
 
-    <a href="mailto:yum@sweeteatsbakery.com">yum@sweeteatsbakery.com</a>
-    <a href="tel:202-555-0144">202-555-0144</a>
-    <address>
-        4209 Bobcat Drive<br />
-        Madison, WI, 48219
-    </address>
+    <section id="contact">
+        <h2>Contact Us</h2>
+
+        <a href="mailto:yum@sweeteatsbakery.com">yum@sweeteatsbakery.com</a>
+        <a href="tel:202-555-0144">202-555-0144</a>
+        <address>
+            4209 Bobcat Drive<br />
+            Madison, WI, 48219
+        </address>
+    </section>
 <!-- footer -->
     <footer>
         <h3>Sweet Eats Bakery</h3>
