--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
         <p>Marzipan jelly-o macaroon I love macaroon jujubes. Candy candy canes jujubes I love ice cream croissant. Lollipop donut icing I love liquorice gummi bears marzipan. Dragée jelly beans apple pie cotton candy lemon drops pastry candy powder.</p>
     </section>
 <!-- content -->
-
 <!-- Image https://tk-assets.lambdaschool.com/7393a8fd-c8e5-4003-921f-79e0d546d02c_ui-i-bakery-cookies.png -->
     <section id="cookies">
         <img src="https://tk-assets.lambdaschool.com/7393a8fd-c8e5-4003-921f-79e0d546d02c_ui-i-bakery-cookies.png">
@@ -74,13 +73,15 @@
 <!-- footer -->
     <footer>
         <h3>Sweet Eats Bakery</h3>
-        <div class="nav">
-            <a href="#about">About</a>
-            <a href="#cookies">Cookies</a>
-            <a href="#celebrations">Celebrations</a>
-            <a href="#catering">Catering</a>
-            <a href="#contact">Contact</a>
-        </div>
+        <nav>
+            <div class="links">
+                <a href="#about">About</a>
+                <a href="#cookies">Cookies</a>
+                <a href="#celebrations">Celebrations</a>
+                <a href="#catering">Catering</a>
+                <a href="#contact">Contact</a>
+            </div>
+        </nav>
         <div class="copyright">
             <p>Copyright Sweet Eats 2018</p>
         </div>
