MVP Complete : 12/12 Passing, Solution Checked

--- a/index.html
+++ b/index.html
@@ -3,31 +3,25 @@
 <head>
     <meta charset="UTF-8">
 <!-- import your css file -->
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Gaegu|Roboto" rel="stylesheet">
     <title>Sweet Eats Bakery</title>
 </head>
 
 <body>
     <header>
-        <div class="companyname">
 <!-- company name -->
-            <h1>Sweet Eats Bakery</h1>
-        </div>
+        <h1>Sweet Eats Bakery</h1>
 <!-- Navigation -->
         <nav>
-            <div class="links">
-                <a href="#about">About</a>
-                <a href="#cookies">Cookies</a>
-                <a href="#celebrations">Celebrations</a>
-                <a href="#catering">Catering</a>
-                <a href="#contact">Contact</a>
-            </div>
+            <a href="#about">About</a>
+            <a href="#cookies">Cookies</a>
+            <a href="#celebrations">Celebrations</a>
+            <a href="#catering">Catering</a>
+            <a href="#contact">Contact</a>
         </nav>
-        <div class="headerimg">
-            <img src="https://tk-assets.lambdaschool.com/bcf76f62-2431-4c22-b466-2e711f3da2b9_ui-i-bakery-main-header.png">
-        </div>
     </header>
+        <img src="https://tk-assets.lambdaschool.com/bcf76f62-2431-4c22-b466-2e711f3da2b9_ui-i-bakery-main-header.png">
 <!-- Marketing header -->
     <section id="about">
         <h2>About Sweet Eats Bakery</h2>
@@ -35,6 +29,7 @@
         <p>Marzipan jelly-o macaroon I love macaroon jujubes. Candy candy canes jujubes I love ice cream croissant. Lollipop donut icing I love liquorice gummi bears marzipan. Dragée jelly beans apple pie cotton candy lemon drops pastry candy powder.</p>
     </section>
 <!-- content -->
+<div class="content">
 <!-- Image https://tk-assets.lambdaschool.com/7393a8fd-c8e5-4003-921f-79e0d546d02c_ui-i-bakery-cookies.png -->
     <section id="cookies">
         <img src="https://tk-assets.lambdaschool.com/7393a8fd-c8e5-4003-921f-79e0d546d02c_ui-i-bakery-cookies.png">
@@ -63,7 +58,7 @@
     <section id="contact">
         <h2>Contact Us</h2>
 
-        <a href="mailto:yum@sweeteatsbakery.com">yum@sweeteatsbakery.com</a>
+        <a href="mailto:yum@sweeteatsbakery.com">yum@sweeteatsbakery.com</a><br />
         <a href="tel:202-555-0144">202-555-0144</a>
         <address>
             4209 Bobcat Drive<br />
@@ -73,6 +68,7 @@
 <!-- footer -->
     <footer>
         <h3>Sweet Eats Bakery</h3>
+        <div class="footer-content">
         <nav>
             <div class="links">
                 <a href="#about">About</a>
@@ -85,6 +81,8 @@
         <div class="copyright">
             <p>Copyright Sweet Eats 2018</p>
         </div>
-    </footer>  
+        </div>
+    </footer>
+</div>  
 </body>
 </html>
